[gd_scene load_steps=24 format=2]

[ext_resource path="res://Fuentes/fuente2.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites && Escenas/stair.png" type="Texture" id=2]
[ext_resource path="res://Sprites && Escenas/meteor.png" type="Texture" id=3]
[ext_resource path="res://Sprites && Escenas/backgroudn.png" type="Texture" id=4]
[ext_resource path="res://Niveles/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://Niveles/Level1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Niveles/Tutorial.tscn" type="PackedScene" id=8]
[ext_resource path="res://Niveles/Instructions.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sonidos/slow-travel.wav" type="AudioStream" id=10]
[ext_resource path="res://Sonidos/SelectButton.wav" type="AudioStream" id=11]

[sub_resource type="PackedScene" id=13]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "Level2", "Node2D", "Sprite", "Sprite", "position", "scale", "texture" ),
"node_count": 2,
"node_paths": [ NodePath(".") ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 0, 0, 1073741824, 0, 3, 2, -1, 3, 4, 0, 5, 1, 6, 2, 0 ),
"variants": [ Vector2( 450, 408 ), Vector2( 35.4922, 26.7422 ), ExtResource( 6 ) ],
"version": 2
}

[sub_resource type="PackedScene" id=14]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "Level3", "Node2D", "Icon", "position", "scale", "texture", "Sprite" ),
"node_count": 2,
"node_paths": [  ],
"nodes": PoolIntArray( -1, -1, 1, 0, -1, 0, 0, 0, 0, 6, 2, -1, 3, 3, 0, 4, 1, 5, 2, 0 ),
"variants": [ Vector2( 507.5, 390 ), Vector2( 15.6406, 11.75 ), ExtResource( 6 ) ],
"version": 2
}

[sub_resource type="DynamicFont" id=1]
size = 45
outline_size = 3
outline_color = Color( 0.752941, 0.32549, 0.466667, 1 )
extra_spacing_char = 7
font_data = ExtResource( 1 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.438636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 20, 600, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.15
scale_random = 0.15
scale_curve = SubResource( 8 )

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 0.502273 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 20, 600, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
initial_velocity_random = 1.0
angular_velocity = 500.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0
scale_curve = SubResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 82
outline_size = 4
outline_color = Color( 0.345098, 0.113725, 0.462745, 1 )
extra_spacing_top = 50
extra_spacing_bottom = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 28
outline_size = 1
outline_color = Color( 0.662745, 0.286275, 0.407843, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 18
outline_size = 1
outline_color = Color( 0.611765, 0.262745, 0.376471, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
lvl2 = SubResource( 13 )
lvl1 = ExtResource( 7 )
lvl3 = SubResource( 14 )
tutorial = ExtResource( 8 )
instruc = ExtResource( 9 )

[node name="Backgroudn" type="Sprite" parent="."]
position = Vector2( 391, 360 )
z_index = -1
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -287.0
margin_top = -326.0
margin_right = 348.0
margin_bottom = -11.0
custom_constants/separation = 30

[node name="Play" type="Button" parent="VBoxContainer" groups=["door"]]
pause_mode = 2
margin_right = 635.0
margin_bottom = 52.0
custom_colors/font_color_hover = Color( 0.878431, 0.6, 0.509804, 1 )
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "PLAY"
flat = true

[node name="Tutorial" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 82.0
margin_right = 635.0
margin_bottom = 134.0
custom_colors/font_color_hover = Color( 0.878431, 0.6, 0.509804, 1 )
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "tutorial"
flat = true

[node name="Instrucc" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 164.0
margin_right = 635.0
margin_bottom = 216.0
custom_colors/font_color_hover = Color( 0.878431, 0.6, 0.509804, 1 )
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "instructions"
flat = true

[node name="Exit" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_top = 246.0
margin_right = 635.0
margin_bottom = 298.0
custom_colors/font_color_hover = Color( 0.878431, 0.6, 0.509804, 1 )
custom_fonts/font = SubResource( 1 )
action_mode = 0
text = "exit"
flat = true

[node name="stars" type="Particles2D" parent="."]
position = Vector2( 1008, 387 )
scale = Vector2( 0.8, 0.9 )
z_index = -1
amount = 200
lifetime = 6.81
preprocess = 5.0
speed_scale = 0.5
visibility_rect = Rect2( 50, -500, -1500, 1000 )
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="meteor" type="Particles2D" parent="."]
use_parent_material = true
position = Vector2( -3, 413 )
rotation = 3.14159
scale = Vector2( 0.3, 0.4 )
z_index = -1
amount = 7
lifetime = 10.0
preprocess = 10.0
randomness = 1.0
visibility_rect = Rect2( 50, -900, -4050, 2000 )
process_material = SubResource( 11 )
texture = ExtResource( 3 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.568
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -375.0
margin_right = 510.0
margin_bottom = -6.0
custom_constants/separation = -90
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 1091.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 12 )
text = " ESCAPE "
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 93.0
margin_right = 1091.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 12 )
text = "FROM"
align = 1
valign = 1

[node name="Label3" type="Label" parent="VBoxContainer2"]
margin_top = 186.0
margin_right = 1091.0
margin_bottom = 369.0
custom_fonts/font = SubResource( 12 )
text = "SPACESHIP"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -21.137
autoplay = true
bus = "Music"

[node name="SelectButton" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -39.891

[node name="SoundMusic" type="Button" parent="."]
margin_left = 751.0
margin_top = 360.0
margin_right = 1037.0
margin_bottom = 395.0
rect_rotation = 25.0
custom_fonts/font = SubResource( 15 )
text = "SOUND MUSIC"
flat = true

[node name="Label" type="Label" parent="SoundMusic"]
margin_left = 118.758
margin_top = 41.7194
margin_right = 158.758
margin_bottom = 60.7194
custom_fonts/font = SubResource( 16 )
text = "ON"

[node name="SoundSFX" type="Button" parent="."]
margin_left = 733.0
margin_top = 430.0
margin_right = 976.0
margin_bottom = 465.0
rect_rotation = 25.0
custom_fonts/font = SubResource( 15 )
text = "SOUND SFX"
flat = true

[node name="Label" type="Label" parent="SoundSFX"]
margin_left = 98.702
margin_top = 38.9346
margin_right = 138.702
margin_bottom = 57.9346
custom_fonts/font = SubResource( 16 )
text = "ON"

[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Tutorial" to="." method="_on_Tutorial_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Instrucc" to="." method="_on_Instrucc_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Instrucc" to="." method="_on_Instrucc_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="SoundMusic" to="." method="_on_Sound_Music_pressed"]
[connection signal="pressed" from="SoundSFX" to="." method="_on_Sound_SFX_pressed"]
